authnft/deploy_script_esm.log


An unexpected error occurred:

C:\Users\Ynez Dias\OneDrive\Desktop\AuthNFT\authnft\scripts\deploy_escrow.ts:1
import { viem } from "hardhat";
         ^

SyntaxError: The requested module 'hardhat' does not provide an export named 'viem'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:177:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:260:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:543:26)
    at async runScriptWithHardhat (C:\Users\Ynez Dias\OneDrive\Desktop\AuthNFT\authnft\node_modules\hardhat\dist\src\internal\builtin-plugins\run\task-action.js:14:5)
    at async Promise.all (index 0)
    at async main (C:\Users\Ynez Dias\OneDrive\Desktop\AuthNFT\authnft\node_modules\hardhat\src\internal\cli\main.ts:220:5)
    at async file:///C:/Users/Ynez%20Dias/OneDrive/Desktop/AuthNFT/authnft/node_modules/hardhat/dist/src/cli.js:21:1

If you think this is a bug in Hardhat, please report it here: https://hardhat.org/report-bug
